# core

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.devel  Justfile  README.md  caddy_test.sh  clippy.toml  ncatomic_activation_test_env.sh
.devcontainer/: .bash_aliases  Dockerfile  devcontainer.json  docker-compose.yml  generate_rust_builder_dockerfile.sh
crates/grpc-common/: Cargo.toml
crates/grpc-common/src/: lib.rs
crates/grpc-journal/: Cargo.toml  build.rs
crates/grpc-journal/protos/: api.proto
crates/grpc-journal/src/: client.rs  journal_stream.rs  lib.rs  server.rs
crates/grpc-nca-system/: Cargo.toml  build.rs
crates/grpc-nca-system/protos/: nca_system.proto
crates/grpc-nca-system/src/: crypto.rs  lib.rs  server.rs
crates/grpc-nca-system/src/server/: config.rs  service.rs  storage.rs  util.rs
crates/grpc-nca-system/src/server/config/: backup.rs  credentials_config.rs
crates/grpc-nca-system/src/server/service/: credentials.rs  nextcloud.rs  storage.rs  system.rs
crates/grpc-nca-system/test/: cloudinit.yaml  setup_test_environment.sh
crates/grpc-nca-system/test/mount/: .gitignore  nca-system.service  nca-system.socket  startup.sh
crates/grpc-occ/: Cargo.toml  build.rs
crates/grpc-occ/protos/: occ.proto
crates/grpc-occ/src/: lib.rs  occ.rs
crates/nca-api-model/: Cargo.toml
crates/nca-api-model/src/: lib.rs
crates/nca-backend/: Cargo.toml
crates/nca-backend/src/: api_routes.rs  config.rs  crypto.rs  main.rs  middleware.rs
crates/nca-caddy/: Cargo.toml  caddy_test.sh
crates/nca-caddy/src/: endpoints.rs  lib.rs
crates/nca-caddy/src/config/: builders.rs  mod.rs  types.rs
crates/nca-error/: Cargo.toml
crates/nca-error/src/: lib.rs
crates/nca-frontend/: .gitignore  Cargo.toml  Dioxus.toml  _grpc_client.ts  input.css  package-lock.json  package.json  style.ts  tailwind.config.js  tsconfig.json
crates/nca-frontend/.cargo/: config.toml
crates/nca-frontend/components/: logstream.ts
crates/nca-frontend/grpc-journal/: api.client.ts  api.ts
crates/nca-frontend/resource/: nca-credentials-backup-encrypt.js  nca-credentials-backup.html
crates/nca-frontend/scss/: index.scss
crates/nca-frontend/src/: assets.rs  layout.rs  lib.rs  main.rs
crates/nca-frontend/src/components/: accordion.rs  configure_configstep.rs  configure_credentials.rs  configure_credentials_backup.rs  configure_nextcloud.rs  configure_storage.rs  configure_welcome.rs  form.rs  logs.rs  mod.rs  nc_config.rs  nc_startup.rs  service_status.rs  setup_progress_drawer.rs
crates/nca-system-api/: Cargo.toml
crates/nca-system-api/src/: lib.rs  occ.rs  systemd.rs
devel/: Dockerfile  build.sh  entrypoint.sh  run_in_container.sh
docs/: activation.md
install/usr/lib/system/system/: grpc-journal.service
resource/: ncp.json
resource/caddy/: base.json  default_nc_aio.json  default_ncatomic_activation.json  default_ncp_activation.json  test_page.json
resource/nextcloud-aio/: compose.yaml.j2  defaults.env.j2
resource/templates/: Caddyfile
resource/templates/nextcloud-aio/: compose.yaml.j2  defaults.env.j2
src/: caddy.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  mock_journal_stream.rs  secrets.rs  templating.rs
test/: compose.yml
test/caddy/: Caddyfile
