[package]
name = "grpc-journal"
version = "0.1.0"
edition = "2021"

[dependencies]

prost = "0.13"
tonic = { version = "0.12", default-features = true }
tonic-web = "0.12"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tower = "0.4"
hyper-util = "0.1.10"
tower-http = {version = "0.5", features = ["cors"]}
systemd = { version = "0.10.0", features = ["default", "serde", "systemd_v245"] }
once_cell = "1.20.3"

[build-dependencies]
tonic-build = { version = "0.12"}

#[lib]
#name = "grpc-journal"
#path = "src/lib.rs"

[[bin]]
name = "dummy-logstream"
path = "src/bin/dummy_logstream.rs"