[package]
name = "grpc-journal"
version = "0.1.0"
edition = "2021"

[dependencies]

prost = "0.13"
tonic = { version = "0.12", default-features = false }
nca-error = {path = "../nca-error"}

tonic-web = { version = "0.12", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tower = { version = "0.4", optional = true }
hyper-util = { version = "0.1.10", optional = true }
tower-http = {version = "0.5", features = ["cors"], optional = true}
systemd = { version = "0.10.0", features = ["default", "serde", "systemd_v245"], optional = true }
futures-util = { version = "0.3.31", optional = true }
grpc-common = {workspace = true, optional = true, features = ["client"]}
clap = { version = "4.5.39", features = ["derive"], optional = true }

[build-dependencies]
tonic-build = "0.12"

[features]
default = ["api", "types"]
types = ["tonic/codegen"]
api = ["tonic/default", "dep:tonic-web", "dep:tokio", "dep:tokio-stream", "dep:tower", "dep:hyper-util", "dep:tower-http", "dep:systemd", "dep:futures-util"]
mock = []
client = ["grpc-common", "clap", "grpc-common/client"]

[[bin]]
name = "dummy-logstream"
path = "src/bin/mock_server.rs"
required-features = ["mock", "api", "types"]

[[bin]]
name = "nca-logs"
path = "src/bin/nca_logs.rs"
required-features = ["client"]
