[package]
name = "grpc-occ"
version = "0.1.0"
edition = "2021"

[dependencies]

prost = "0.13"
tonic = { version = "0.12", default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"], optional = true }
triggered = "0.1"
nca-error = {version = "0.1.0", path = "../nca-error"}
hyper-util = "0.1.10"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.12"

[features]
default = ["api"]
types = ["tonic/codegen"]
api = ["tonic/default", "dep:tokio", "nca-error/tonic"]
mock = []

[[bin]]
name = "occd"
path = "src/bin/server.rs"

[[bin]]
name = "occ"
path = "src/bin/client.rs"