[package]
name = "grpc-occ"
version = "0.1.0"
edition = "2021"

[dependencies]

tonic = { workspace = true }
tokio = { workspace = true, optional = true }
nca-error = { workspace = true }
grpc-common = { workspace = true, features = ["client"] }
prost = "0.13"
triggered = "0.1"

[build-dependencies]
tonic-build = "0.12"

[features]
default = ["api"]
types = ["tonic/codegen"]
api = ["tonic/default", "dep:tokio", "nca-error/tonic", "grpc-common/server"]
mock = []
client = ["grpc-common/client"]

[[bin]]
name = "occd"
path = "src/bin/server.rs"
required-features = ["api"]

[[bin]]
name = "occ"
path = "src/bin/client.rs"
required-features = ["client"]