[package]
name = "nca-caddy"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.2"
hyper = "1.6.0"
hyper-util = "0.1.10"
tokio = { version = "1.43.0", features = ["rt", "macros"] }
anyhow = "1.0.96"
reqwest = "0.12.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
hmac = "0.12.1"
hex-literal = "0.4"
hex = "0.4.3"
serde_with = { version = "3.12.0", features = ["json"] }

[features]
default = []
mock = []
