[package]
name = "nca-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
daisy_rsx = { version = "0.1.14" }
dioxus = { version = "0.6", features = ["macro", "html", "signals", "web", "hooks"] }
dioxus-logger = "0.6"
nca-system-api = { version = "0.1.0", path = "../nca-system-api", default-features = false, features = [] }
nca-api-model = {path = "../nca-api-model"}
reqwest = { version = "0.12.15", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
#tracing-wasm = "0.2"
web-sys = { version = "0.3", features = ["default", "Url"] }
tokio = { version = "1.43", features = ["macros", "sync"] }
async-std = "1.13"
serde_json = "1.0.138"
dioxus-free-icons = { version = "0.9", features = ["hero-icons-outline", "hero-icons-solid", "lucide"] }
rand = { version = "0.9" }
getrandom = { version = "0.3", features = ["wasm_js"] }
paspio = { version = "1.0" }
strum = { version = "0.27.1", features = ["derive"] }
http = { version = "1.3.1", optional = false }
bytes = "1.10.1"


[lib]

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
mock-backend = []
